# talos

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile.builder  Dockerfile.ollama  LICENSE-MIT  Makefile  QUICKSTART.md  README.md  SECURITY.md  add_scopes.py  audit.toml  deny.toml  docker-compose.observability.yml  docker-compose.prod.yml  docker-compose.yml  rust-toolchain.toml  update_protocol.py
controller/: Cargo.toml  Dockerfile
controller/examples/: backfill_module_payload_encryption.rs  backfill_workflow_output_encryption.rs  rewrap_deks_to_vault.rs  verify_llm_tier_ceiling.rs  verify_module_payload_encryption.rs  verify_phase_b.rs  verify_v2_decryptable.rs  verify_vault_kek.rs
controller/src/: actor_memory_service.rs  actor_repository.rs  actor_scaffold_service.rs  advanced_repository.rs  analytics_repository.rs  api_docs.rs  api_keys.rs  audit_ledger.rs  capability_downgrade.rs  circuit_breaker.rs  cli.rs  config.rs  cost_attribution.rs  csrf.rs  db.rs  db_monitor.rs  distributed_ratelimit.rs  dlp.rs  errors.rs  execution_repository.rs  feature_flags.rs  graph_rag.rs  idempotency.rs  integration_state_service.rs  jobs.rs  lib.rs  main.rs  memory_crypto.rs  metrics.rs  module_executions.rs  module_payload_encryption.rs  module_repository.rs  module_templates.rs  node_cache.rs  organizations.rs  rate_limit.rs  replay_diff.rs  request_id.rs  retry_intelligence.rs  rpc_subscribers.rs  (+23 more)
controller/src/actor_policies/: mod.rs
controller/src/api/: mod.rs
controller/src/atlassian/: mod.rs
controller/src/auth/: mod.rs
controller/src/bootstrap/: background.rs  mod.rs  router.rs  services.rs
controller/src/compilation/: mod.rs
controller/src/engine/: mod.rs
controller/src/gmail/: mod.rs
controller/src/google_calendar/: mod.rs
controller/tests/: actor_memory_dek_tests.rs  actor_memory_sweep_dek_tests.rs  api_auth_integration_test.rs  api_key_tests.rs  auth_concurrency_tests.rs  auth_tests.rs  circuit_breaker_integration.rs  csrf_integration_tests.rs  execution_event_tests.rs  execution_status_transition_tests.rs  github_app_tenancy_tests.rs  governance_tests.rs  input_validation_tests.rs  integration_mcp_tests.rs  integration_state_crypto_tests.rs  js_compilation_tests.rs  jwt_security_tests.rs  mcp_safety_tests.rs  memory_get_entry_tests.rs  ml_backend_selection_tests.rs  ml_correction_tests.rs  ml_delete_tests.rs  ml_digest_tests.rs  ml_fewshot_tests.rs  ml_lifecycle_tests.rs  ml_provision_tests.rs  ml_registry_tenancy_tests.rs  module_execution_status_tests.rs  module_payload_dek_tests.rs  module_template_tests.rs  nats_topic_tests.rs  oauth_flow_tests.rs  oauth_scoped_token_tests.rs  oauth_tests.rs  organization_tests.rs  registry_access_tests.rs  registry_tests.rs  report_quality_signals_tests.rs  rhai_check.rs  scheduler_tests.rs  (+7 more)
deploy/: README.md
talos-actor-lifecycle-service/: Cargo.toml
talos-actor-lifecycle-service/src/: handoff.rs  lib.rs  scaffold_args.rs
talos-actor-memory-service/: Cargo.toml
talos-actor-memory-service/src/: lib.rs
talos-actor-policies/: Cargo.toml
talos-actor-policies/src/: cache.rs  evaluator.rs  lib.rs  rhai_eval.rs  tests.rs  types.rs
talos-actor-policy-hook/: Cargo.toml
talos-actor-policy-hook/src/: lib.rs
talos-actor-repository/: Cargo.toml
talos-actor-repository/src/: budget_precheck.rs  lib.rs
talos-actor-repository/tests/: budget_guard_integration.rs  write_ceiling_guard_integration.rs
talos-actor-scaffold/: Cargo.toml
talos-actor-scaffold/src/: lib.rs
talos-actor-types/: Cargo.toml
talos-actor-types/src/: lib.rs  llm_tier.rs  policy.rs
talos-advanced-repository/: Cargo.toml
talos-advanced-repository/src/: lib.rs
talos-advanced-repository/tests/: scratch_rls.rs
talos-analytics-repository/: Cargo.toml
talos-analytics-repository/src/: lib.rs
talos-api/: Cargo.toml
talos-api-docs/: Cargo.toml
talos-api-docs/src/: lib.rs
talos-api-keys/: Cargo.toml
talos-api-keys/src/: lib.rs
talos-api/src/: access_check.rs  dataloaders.rs  lib.rs  schema_patch.rs  validation.rs  validation_tests.rs
talos-atlassian/: Cargo.toml
talos-atlassian/src/: handlers.rs  integration.rs  lib.rs
talos-audit-event/: Cargo.toml
talos-audit-event/src/: lib.rs  tests.rs
talos-audit-ledger/: Cargo.toml
talos-audit-ledger/src/: lib.rs
talos-auth/: Cargo.toml
talos-auth-types/: Cargo.toml
talos-auth-types/src/: claims.rs  lib.rs  org_role.rs  scope.rs
talos-auth/src/: auth_tests.rs  bootstrap.rs  lib.rs
talos-circuit-breaker/: Cargo.toml
talos-circuit-breaker/src/: lib.rs
talos-compilation/: Cargo.toml
talos-compilation/src/: analyze.rs  container.rs  dependency_allowlist.rs  js_templates.rs  lib.rs  scaffold.rs  target_cache.rs
talos-compilation/tests/: jspy_sandbox_integration.rs  target_cache_integration.rs
talos-config-validator/: Cargo.toml
talos-config-validator/src/: lib.rs
talos-continuation-trigger/: Cargo.toml
talos-continuation-trigger/src/: lib.rs
talos-cost-attribution/: Cargo.toml
talos-cost-attribution/src/: lib.rs
talos-csrf/: Cargo.toml
talos-csrf/src/: lib.rs
talos-db/: Cargo.toml
talos-db/src/: lib.rs
talos-db/tests/: rls_helper_enforcement.rs  rls_org_isolation.rs
talos-dlp-provider/: Cargo.toml
talos-dlp-provider/src/: lib.rs
talos-engine/: Cargo.toml
talos-engine-events/: Cargo.toml
talos-engine-events/src/: lib.rs
talos-engine/src/: actor_binding.rs  adaptive_fuel.rs  approval_gate.rs  assistant_report_reader.rs  builder.rs  checkpoint_store.rs  error.rs  event_sink.rs  events.rs  expression_evaluator.rs  fence.rs  judge_score_recorder.rs  lib.rs  module_execution_store.rs  module_fetcher.rs  nats_run.rs  node_hook.rs  operator_digest_reader.rs  ops_alerts_reader.rs  pending_approvals_reader.rs  retry_classifier.rs  rhai_helpers.rs  sanitizer.rs  sub_actor_context_resolver.rs  user_errors.rs  workflow_chains.rs
talos-envelope-seal/: Cargo.toml
talos-envelope-seal/src/: lease.rs  lib.rs  responder.rs
talos-envelope-seal/tests/: nats_claim_integration.rs
(+1998 files in other folders)
