[package]
name = "talos-actor-memory-service"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
anyhow.workspace = true
serde_json.workspace = true
talos-graph-rag = { path = "../talos-graph-rag" }
talos-memory = { path = "../talos-memory" }
talos-workflow-repository = { path = "../talos-workflow-repository" }
tracing.workspace = true
uuid.workspace = true

[lints]
workspace = true
