[package]
name = "talos-actor-memory-service"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
anyhow.workspace = true
serde_json.workspace = true
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"] }
talos-graph-rag = { path = "../talos-graph-rag" }
talos-memory = { path = "../talos-memory" }
talos-workflow-engine-core = { path = "../talos-workflow-engine-core" }
talos-workflow-repository = { path = "../talos-workflow-repository" }
tokio = { version = "1", features = ["sync", "rt", "macros"] }
tracing.workspace = true
uuid.workspace = true

[lints]
workspace = true
