[package]
name = "talos-actor-policy-hook"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
anyhow.workspace = true
async-trait = "0.1"
sqlx = { version = "0.8", default-features = false, features = ["postgres", "runtime-tokio-rustls", "macros", "uuid", "json", "chrono"] }
talos-actor-types = { path = "../talos-actor-types" }
uuid.workspace = true

[lints]
workspace = true
