[package]
name = "talos-actor-repository"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
serde_json.workspace = true
sqlx = { version = "0.8", default-features = false, features = ["postgres", "runtime-tokio-rustls", "macros", "uuid", "json", "chrono"] }
talos-config = { path = "../talos-config" }
talos-db = { path = "../talos-db" }
talos-tenancy = { path = "../talos-tenancy" }
talos-dlp-provider = { path = "../talos-dlp-provider" }
talos-memory = { path = "../talos-memory" }
talos-text-util = { path = "../talos-text-util" }
talos-secrets-manager = { path = "../talos-secrets-manager" }
talos-workflow-job-protocol = { path = "../talos-workflow-job-protocol" }
tokio = { version = "1", features = ["sync", "rt", "macros"] }
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
tokio = { version = "1", features = ["sync", "rt", "macros"] }
sqlx = { version = "0.8", default-features = false, features = ["postgres", "runtime-tokio-rustls", "uuid"] }
uuid = { version = "1", features = ["v4"] }

[lints]
workspace = true
