[package]
name = "talos-advanced-repository"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx = { version = "0.8", default-features = false, features = ["postgres", "runtime-tokio-rustls", "macros", "uuid", "json", "chrono"] }
talos-db = { path = "../talos-db" }
talos-dlp-provider = { path = "../talos-dlp-provider" }
talos-tenancy = { path = "../talos-tenancy" }
talos-text-util = { path = "../talos-text-util" }
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread"] }

[lints]
workspace = true
