[package]
name = "talos-analytics-repository"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
regex = "1.12"
serde.workspace = true
serde_json.workspace = true
sqlx = { version = "0.8", default-features = false, features = ["postgres", "runtime-tokio-rustls", "macros", "uuid", "json", "chrono"] }
talos-db = { path = "../talos-db" }
talos-secrets-manager = { path = "../talos-secrets-manager" }
talos-workflow-job-protocol = { path = "../talos-workflow-job-protocol" }
tokio = { version = "1", features = ["macros", "rt"] }
tracing.workspace = true
uuid.workspace = true

[lints]
workspace = true
