[package]
name = "talos-api-docs"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
async-graphql = { version = "7.2", features = ["uuid", "chrono", "dataloader"] }
axum = { version = "0.8", features = ["json"] }
serde.workspace = true
serde_json.workspace = true
talos-api = { path = "../talos-api" }
talos-auth-types = { path = "../talos-auth-types" }
talos-config = { path = "../talos-config" }
talos-errors = { path = "../talos-errors" }

[lints]
workspace = true
