[package]
name = "talos-atlassian"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
anyhow.workspace = true
axum = { version = "0.8", features = ["json"] }
chrono.workspace = true
oauth2 = { version = "4.4.2", default-features = false, features = ["reqwest"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde.workspace = true
serde_json.workspace = true
sqlx = { version = "0.8", default-features = false, features = ["postgres", "runtime-tokio-rustls", "macros", "uuid", "json", "chrono"] }
# MCP-1021: route FRONTEND_URL through the canonical validated helper
# (rejects ? and # in addition to /; the inline validator only checked /).
talos-config = { path = "../talos-config" }
talos-http-body = { path = "../talos-http-body" }
talos-oauth = { path = "../talos-oauth" }
tracing.workspace = true
urlencoding = "2.1"
uuid.workspace = true

[lints]
workspace = true
